--- a/api.html
+++ b/api.html
@@ -328,8 +328,7 @@
 
     // --- ZENTRALE SENDE-FUNKTION (Handles normal & debug) ---
     async function sendRequest(promptText, isDebug = false) {
-        // ACHTUNG: Hier deinen API Key eintragen!
-        const key = "AIzaSyDNSYRKSsuV3I7lQNMo15EXk4z1W6wexJU"; 
+        // API Key ist jetzt sicher im Cloudflare Worker gespeichert
         const model = "gemini-2.5-pro"; 
         
         if(!promptText) { alert("Kein Text!"); return; }
@@ -378,7 +377,7 @@
                 contents: chatHistory // Der normale Chat-Verlauf
             };
 
-            const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/${model}:generateContent?key=${key}`, {
+            const response = await fetch(`https://physikapi.dinc-yavuz.workers.dev/?model=${model}`, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify(requestBody) // Wir senden das komplette Paket!
