Update textarea placeholder in index.html
Signed-off-by: yavuzd7 <123557350+yavuzd7@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
             <div style="margin-top: 60px; margin-bottom: 20px; padding: 30px; background-color: #f1f8e9; border: 2px solid #81c784; border-radius: 12px; text-align: center; box-shadow: 0 5px 20px rgba(0,0,0,0.05);">
                 <h3 style="margin-top: 0; color: #2e7d32; font-size: 1.5em;">💾 Experiment beendet?</h3>
                 <p style="color: #555; font-size: 1em; margin-bottom: 15px;"><strong>Schritt 1:</strong> Kopiere den Chatverlauf im Fenster oben (Klick auf "📋 Chat kopieren").<br><strong>Schritt 2:</strong> Füge ihn hier unten ein:</p>
-                <textarea id="chat-history-input" style="width: 90%; height: 150px; padding: 10px; border: 1px solid #81c784; border-radius: 5px; font-family: inherit; font-size: 0.9em; margin-bottom: 20px;" placeholder="Rechtsklick 'Einfügen' oder lange drücken auf dem iPad..."></textarea><br>
+                <textarea id="chat-history-input" style="width: 90%; height: 150px; padding: 10px; border: 1px solid #81c784; border-radius: 5px; font-family: inherit; font-size: 0.9em; margin-bottom: 20px;" placeholder=""></textarea><br>
                 <button type="button" id="download-protocol-btn" style="background-color: #2e7d32; color: white; border: none; padding: 15px 35px; border-radius: 50px; font-size: 1.2em; cursor: pointer; font-weight: bold; box-shadow: 0 4px 10px rgba(46, 125, 50, 0.3); transition: transform 0.2s;">📥 Vollständiges Protokoll herunterladen</button>
             </div>
            
